--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "namastereact",
   "version": "1.0.0",
   "description": "Creating bathing Products",
-  "main": "app.js",
   "scripts": {
+    "start": "parcel index.html",
+    "build": "parcel build index.html",
     "test": "jest"
   },
   "author": "Vutukuri Nikitha",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.20.12",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "parcel": "^2.8.2",
     "process": "^0.11.10"
   },
@@ -16,8 +19,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
-  "browserlist": [
-    "last 2 google chrome versions "
+  "browserslist": [
+    "last 2 chrome version"
   ],
   "repository": {
     "type": "git",
